flex nav spacing issue fixed

--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -36,8 +36,9 @@ header {
 header nav ul {
   list-style-type: none;
   margin: 0;
-  flex: 2;
+  flex-grow: 2;
   justify-content: flex-end;
+  align-items: center;
 }
 
 header nav ul li {
